--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -25,3 +25,9 @@ body {
     )
     rgb(var(--background-start-rgb));
 }
+
+.logo {
+  position: absolute;
+  top: 10px; /* Distance from the top of the container */
+  left: 10px; /* Distance from the left side of the container */
+}
