--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -18,6 +18,7 @@
 
 body {
   color: rgb(var(--foreground-rgb));
+  font-style: 'text-shadow-black-outline';
   background: linear-gradient(
       to bottom,
       transparent,
@@ -29,16 +30,17 @@ body {
 @media (min-width: 640px) {
   .logo {
     position: absolute;
-    top: 10px; /* Distance from the top of the container */
-    left: 10px; /* Distance from the left side of the container */
+    width: 175px;
+    top: 15px; /* Distance from the top of the container */
+    left: 55px; /* Distance from the left side of the container */
   }
 }
 
 @media (max-width: 640px) {
   .logo {
     position: absolute;
-    width: 200px;
-    top: 15%; /* Distance from the top of the container */
+    width: 165px;
+    top: 13%; /* Distance from the top of the container */
     left: 50%; /* Distance from the left side of the container */
     transform: translate(-50%, -50%); /* Centers the logo */
   }
