--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -50,3 +50,21 @@ body {
     transform: translate(-50%, -50%); /* Centers the logo */
   }
 }
+
+@media (min-width: 640px) {
+  .bg-panes {
+    background-image: url('https://res.cloudinary.com/drc0myo7z/image/upload/c_scale,w_1080/v1697413842/Trapiche/lsgceibitwu69x9ntulf_hyrbwy.jpg');
+    background-repeat: no-repeat;
+    background-position: 65% bottom;
+    background-size: cover;
+  }
+}
+
+@media (max-width:640px) {
+  .bg-panes {
+    background-image: url('https://res.cloudinary.com/drc0myo7z/image/upload/c_scale,w_1080/v1694794027/Trapiche/cgbgql0tmupgvdly2g5l.jpg');
+    background-repeat: no-repeat;
+    background-position: bottom;
+    background-size: cover;
+  }
+}
